<resources>
    <string name="app_name">NordisQuiz</string>

    StartGameConnection
    <string name="connectingToServer">Подключение к серверу…</string>
    <string name="connecting_state_2">Сбор игроков…</string>
    <string name="connecting_state_2.1">Сбор игроков…2</string>
    <string name="connecting_state_2.2">Сбор игроков…3</string>
    <string name="connecting_state_2.3">Сбор игроков…4</string>
    <string name="connecting_state_2.4">Нет соединения…</string>
    <string name="connecting_state_3">Старт…</string>
    <string name="connecting_state_take_a_brake">Сделаем передышку</string>


    InternetCheck
    <string name="noInternetConnection">отсутсвует Интернет</string>


    MainMenu
    <string name="profile">Профиль</string>
    <string name="raitings">Рейтинг</string>
    <string name="settings">Настройки</string>
    <string name="btnStartGame">Start</string>

    Fragments
    <string name="nick">Введите имя</string>
    <string name="accept">Принять</string>
    <string name="Cancel">Отмена</string>
    <string name="UserStandardName">Игрок0710</string>

    StartQuiz
    <string name="PlayerNames">Name</string>
    <string name="Quest_one">Вопрос 1</string>
    <string name="Quest_two">Вопрос 2</string>

</resources>