<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/custom_backround_1"
    tools:context=".fragments.UserProfile">


    <ImageView
        android:id="@+id/UserMainAvatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@mipmap/user_profile2"
        android:tag="userMainAvatar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.32" />


    <EditText
        android:id="@+id/userEditNameText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:hint="@string/nick"
        android:textColor="@color/yellow2"
        android:textColorHint="@color/yellow2"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7"
        app:layout_constraintWidth_percent="0.7"></EditText>

    <Button
        android:id="@+id/btnGetAvatar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/btn_yellow_custom"
        android:text="@string/chooseYourImage"
        app:layout_constraintEnd_toEndOf="@+id/UserMainAvatar"
        app:layout_constraintHeight_percent="0.08"
        app:layout_constraintStart_toStartOf="@+id/UserMainAvatar"
        app:layout_constraintTop_toBottomOf="@+id/UserMainAvatar"
        app:layout_constraintWidth_percent="0.5" />

    <Button
        android:id="@+id/btnAccept"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/btn_yellow_custom"
        android:text="@string/accept"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.06"
        app:layout_constraintWidth_percent="0.3" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/btn_yellow_custom"
        android:text="@string/Cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.3" />


</androidx.constraintlayout.widget.ConstraintLayout>